# shs

./: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  shs.pc.in
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.3t  traces.4
src/: #Makefile#  Array.h  Bessel.cpp  Bessel.h  ComplexVector3.h  ConjugateGradient.h  Makefile.am  Makefile.in  SHS.cpp  SHSMPI.cpp  SilicaMIT.cpp  SilicaMIT.h  SiliconDoped.cpp  SiliconDoped.h  SphereHalfspace.cpp  SphereHalfspace.h  SphereHalfspaceMPI.cpp  SphereHalfspaceMPI.h  config.h.in  quadgk715.cpp  quadgk715.h  zpmn.cpp  zpmn.h
src/amos/: Makefile.am  Makefile.in  d1mach.cpp  i1mach.cpp  libamos.la
src/util/: DenseMatrix.h  Dielectrics.cpp  Dielectrics.h  Makefile.am  Makefile.in  MathUtils.cpp  MathUtils.h  Params.cpp  Params.h  SI.cpp  SI.h  SiliconDoped.cpp  Util.h
test/: options.txt
