AM_CXXFLAGS = @SHS_CFLAGS@

libamosincludedir = $(includedir)

lib_LIBRARIES = libamos.a
libamos_a_SOURCES = \
  cacai.f cacon.f cbesh.f cbesi.f cbesj.f cbesk.f cbesy.f cbinu.f \
  cbuni.f cbunk.f cunk1.f cunk2.f crati.f cshch.f cuni1.f \
  cuoik.f cairy.f cbiry.f ckscl.f cs1s2.f cuchk.f cuni2.f cwrsk.f \
  casyi.f cbknu.f cmlri.f cseri.f cunhj.f cunik.f dgamln.f gamln.f \
  xzabs.f xzexp.f xzlog.f xzsqrt.f zacai.f zacon.f \
  zairy.f zasyi.f zbesh.f zbesi.f zbesj.f zbesk.f zbesy.f zbinu.f \
  zbiry.f zbknu.f zbuni.f zbunk.f zdiv.f zkscl.f zmlri.f zmlt.f \
  zrati.f zs1s2.f zseri.f zshch.f zuchk.f zunhj.f zuni1.f zuni2.f \
  zunik.f zunk1.f zunk2.f zuoik.f zwrsk.f i1mach.cpp d1mach.cpp
